Changes related to tree view structure without api implementation in Audit

--- a/src/app/audit/tree-view/has-child/has-child.component.html
+++ b/src/app/audit/tree-view/has-child/has-child.component.html
@@ -1,5 +1,6 @@
 <app-table-row [dataSource]="childData"
                [displayedColumns]="displayedColumns"
                [referenceId]="'child'"
+               [title]="childData[0].childOf"
                [iconKeyReference]="'child'">
 </app-table-row>
