--- a/src/app/audit/tree-view/tree-view.component.less
+++ b/src/app/audit/tree-view/tree-view.component.less
@@ -36,6 +36,14 @@ div.table { margin: 10px; }
   min-height: 0;
   overflow: hidden;
 }
+.treeViewLoading{
+  text-align: center;
+  padding: 10px 0%;
+}
+.dataNotAvaliable{
+  color: #6c6b73;
+  text-align: center;
+}
 
 
 
