added status field in services under release table

--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -74,32 +74,38 @@
                   <div class="chart_value bg-info flex-grow-1">
                     <div class="cv_heighlight text-muted">08</div>
                     <!-- /.cv_heighlight -->
-                    <div class="cv_name">Services</div>
+                    <div class="cv_name text-muted">Services</div>
                     <!-- /.cv_name -->
                   </div>
                   <!-- /.chart_value low -->
                   <div class="chart_value flex-grow-1">
                     <div class="cv_heighlight text-danger">06</div>
                     <!-- /.cv_heighlight -->
-                    <div class="cv_name">Failed</div>
+                    <div class="cv_name text-muted">Failed</div>
                     <!-- /.cv_name -->
                   </div>
                   <!-- /.chart_value alert -->
                   <div class="chart_value cv_alert flex-grow-1">
                     <div class="cv_heighlight text-muted">2</div>
                     <!-- /.cv_heighlight -->
-                    <div class="cv_name">Review</div>
+                    <div class="cv_name text-muted">Review</div>
                     <!-- /.cv_name -->
                   </div>
                   <!-- /.chart_value alert -->
                   <div class="chart_value cv_alert flex-grow-1">
                     <div class="cv_heighlight">0</div>
                     <!-- /.cv_heighlight -->
-                    <div class="cv_name">Success</div>
+                    <div class="cv_name text-muted">Success</div>
                     <!-- /.cv_name -->
                   </div>
                   <!-- /.chart_value alert -->
                 </div>
+                <div class="audit-info px-1 d-flex bg-white">
+                  <div>
+                    <h4>0</h4>
+                    <span class="text-muted">In Progress</span>
+                  </div>
+                  </div>
               <!-- <div class="audit-info px-3 d-flex bg-white">
                 <div>
                   <h4 class="text-danger">6</h4>
