changes related to deployment verification and oes minor changes

--- a/src/app/policy-management/policy-management.component.html
+++ b/src/app/policy-management/policy-management.component.html
@@ -70,11 +70,11 @@
                                             (click)="onChangeTab($event)">
                                             <li class="nav-item">
                                               <a class="nav-link {{currentTab === 'DYNAMIC'?'active':''}}" id="DYNAMIC" data-toggle="tab" role="tab"
-                                                aria-controls="DYNAMIC" aria-selected="true">Dynamic Policies</a>
+                                                aria-controls="DYNAMIC" aria-selected="true">Runtime Policies</a>
                                             </li>
                                             <li class="nav-item">
                                               <a class="nav-link {{currentTab === 'STATIC'?'active':''}}" id="STATIC" data-toggle="tab" role="tab"
-                                                aria-controls="STATIC" aria-selected="false">Static Policies</a>
+                                                aria-controls="STATIC" aria-selected="false">Compliant Pipeline Policies</a>
                                             </li>
                                           </ul>
                                           <div class="col-12 policyContent">
