--- a/src/app/application-onboarding/create-account/create-account.component.html
+++ b/src/app/application-onboarding/create-account/create-account.component.html
@@ -85,7 +85,7 @@
                          <!-- /.form-group -->
 
                          <div class="form-group">
-                             <label>File</label>
+                             <label>KubeConfig File</label>
                              <input 
                              formControlName="file"
                              id="file" name="file"
