--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -37,5 +37,34 @@
     padding-left: 16px;
   }
   .bg-info {
-    background-color: #ccc!important;
+    background-color: #eaeaea !important;
+}
+.example-container {
+  width: 100%;
+  height: 900px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.example-sidenav-content {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.example-sidenav {
+  padding: 20px;
+}
+.mat-drawer-transition .mat-drawer-content {
+  transition-duration: 400ms;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  /* transition-property: transform,margin-left,margin-right; */
+  background-color: white !important;
+}
+.mat-drawer-container {
+  background-color: #fff !important;
+  color: rgba(0,0,0,.87);
+}
+.mat-button {
+  background-color: #ccc !important;
 }
